--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
     />
+    <link rel="icon" type="image/png" href="/i_icon.png">
+    <!-- <a target="_blank" href="https://icons8.com/icon/6cdJEps4HrFl/information">I</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
 
   </head>
   <body>
